# skypro-django

./: .gitignore  README.md  category.json  product.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: add.pug  post_image.pug  post_menu.pug  posts.pug  view.pug
catalog/: admin.py  apps.py  forms.py  main_menu.py  models.py  services.py  settings.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0002_product_owner.py  0003_alter_product_options.py
catalog/templates/: contacts.html  feedback.html  home.html  list.pug  main_menu.html  product_detail.pug  product_form.pug
catalog_site/: apps.py  main_menu.py  models.py  urls.py  views.py
catalog_site/management/commands/: add_products.py
catalog_site/migrations/: 0001_initial.py  0002_contacts.py
catalog_site/static/: custom.css
catalog_site/templates/: base.html  catalog.pug  contacts.html  home.html  main_menu.html  product.html  product.pug
fixtures/: groups.json
my_site/: main_menu.py  settings.py  urls.py
my_site/templates/: about.html  base.html  image_thumb.pug  main_menu.pug
mysite/: settings.py  urls.py
static/: custom.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_user_avatar_user_country_user_phone.py
users/templates/: cabinet.pug  login.pug  register.pug
